--- a/uv/themes/uv-cy-GB-theme/css/uv-mediaelement-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-mediaelement-extension/theme.css
@@ -27,29 +27,29 @@
   margin: 0 0 0 10px;
 }
 #app .overlay.share .middle .content .tabs .tab.on {
-  border-bottom: 1px solid #211f1f;
-  color: #14a4c3;
+  border-bottom: 1px solid #1f1f1f;
+  color: #869f33;
   margin-bottom: -1px;
   height: 23px;
   line-height: 23px;
 }
 #app .overlay.share .middle .content .tabs .tab:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app .overlay.share .middle .content .tabsContent {
   padding: 10px 0 5px 0;
-  border-top: 1px solid #efefef;
+  border-top: 1px solid #EFEFEF;
 }
 #app .overlay.share .middle .content .tabsContent .shareView .url {
   width: 100%;
-  background: #efefef;
-  border: 1px solid #9a9a9a;
+  background: #EFEFEF;
+  border: 1px solid #bbbbbb;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .code {
   width: 100%;
-  background: #efefef;
-  border: 1px solid #9a9a9a;
+  background: #EFEFEF;
+  border: 1px solid #bbbbbb;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .customSize {
@@ -87,7 +87,7 @@
   padding: 0;
 }
 #app .overlay.download .middle ol.options li.group {
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #EFEFEF;
 }
 #app .overlay.download .middle ol.options li.group.lastVisible {
   border-bottom: none;
@@ -226,7 +226,7 @@
   border: 2px solid #fff;
 }
 #app .leftPanel .views .thumbsView .thumbs .thumb.searchpreview .wrap {
-  border: 2px solid #26b5cc;
+  border: 2px solid #869f33;
 }
 #app .leftPanel .views .thumbsView .thumbs .thumb span {
   font-size: 11px;
@@ -305,8 +305,8 @@
   padding: 0 10px 20px 10px;
 }
 #app .rightPanel .main .items .header {
-  color: #14a4c3;
-  border-bottom: 1px solid #14a4c3;
+  color: #869f33;
+  border-bottom: 1px solid #869f33;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
@@ -316,8 +316,8 @@
   margin: 0 0 20px 0;
 }
 #app .rightPanel .main .items .item .header {
-  color: #9a9a9a;
-  border-bottom: 1px solid #343434;
+  color: #bbbbbb;
+  border-bottom: 1px solid #555555;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
@@ -339,9 +339,9 @@
   white-space: nowrap;
   padding: 4px;
   text-transform: none;
-  background-color: #343434;
+  background-color: #555555;
   z-index: 1;
-  border: 1px solid #9a9a9a;
+  border: 1px solid #bbbbbb;
   border-radius: 2px;
   color: #fff;
 }
@@ -352,11 +352,11 @@
   word-wrap: break-word;
 }
 #app .rightPanel .main .items .item .text a.toggle {
-  color: #14a4c3;
+  color: #869f33;
   font-weight: normal;
 }
 #app .rightPanel .main .items .item .text a.toggle:hover {
-  color: #22c5e8;
+  color: #a5c342;
 }
 #app .rightPanel .main .items .item .text a.toggle.more,
 #app .rightPanel .main .items .item .text a.toggle.less {
@@ -1242,10 +1242,10 @@
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: none;
+  background: #787878;
 }
 ::-webkit-scrollbar-thumb {
-  background: #565656;
+  background: #a5c342;
 }
 html,
 body {
@@ -1279,12 +1279,12 @@ textarea {
   background-image: none;
 }
 a {
-  color: #26b5cc;
+  color: #869f33;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #48c8dd;
+  color: #a5c342;
   text-decoration: underline;
 }
 a:focus {
@@ -1307,7 +1307,7 @@ img {
   padding: 5px 5px 5px 5px;
   line-height: 1.42857143;
   background-color: #000;
-  border: 1px solid #565656;
+  border: 1px solid #787878;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -1322,7 +1322,7 @@ hr {
   margin-top: 17px;
   margin-bottom: 17px;
   border: 0;
-  border-top: 1px solid #efefef;
+  border-top: 1px solid #EFEFEF;
 }
 .sr-only {
   position: absolute;
@@ -1382,8 +1382,8 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #fff;
-  background-color: #565656;
-  border-color: #565656;
+  background-color: #787878;
+  border-color: #787878;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -1391,8 +1391,8 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   color: #fff;
-  background-color: #424242;
-  border-color: #383838;
+  background-color: #636363;
+  border-color: #595959;
 }
 .btn-default:active,
 .btn-default.active,
@@ -1414,13 +1414,13 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #565656;
-  border-color: #565656;
+  background-color: #787878;
+  border-color: #787878;
 }
 .btn-primary {
   color: #fff;
-  background-color: #14a4c3;
-  border-color: #14a4c3;
+  background-color: #cc0000;
+  border-color: #cc0000;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -1428,8 +1428,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #10859e;
-  border-color: #0e758b;
+  background-color: #a30000;
+  border-color: #8f0000;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -1451,13 +1451,13 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #14a4c3;
-  border-color: #14a4c3;
+  background-color: #cc0000;
+  border-color: #cc0000;
 }
 .btn-secondary {
   color: #fff;
-  background-color: #14a4c3;
-  border-color: #14a4c3;
+  background-color: #869f33;
+  border-color: #869f33;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
@@ -1465,8 +1465,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-secondary.active,
 .open .dropdown-toggle.btn-secondary {
   color: #fff;
-  background-color: #10859e;
-  border-color: #0e758b;
+  background-color: #6c8029;
+  border-color: #5f7124;
 }
 .btn-secondary:active,
 .btn-secondary.active,
@@ -1488,8 +1488,8 @@ fieldset[disabled] .btn-secondary:active,
 .btn-secondary.disabled.active,
 .btn-secondary[disabled].active,
 fieldset[disabled] .btn-secondary.active {
-  background-color: #14a4c3;
-  border-color: #14a4c3;
+  background-color: #869f33;
+  border-color: #869f33;
 }
 .btn-warning {
   color: #fff;
@@ -1640,7 +1640,7 @@ fieldset[disabled] .btn-info.active {
   border-color: #5bc0de;
 }
 .btn-link {
-  color: #26b5cc;
+  color: #869f33;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -1661,7 +1661,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #48c8dd;
+  color: #a5c342;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -1669,7 +1669,7 @@ fieldset[disabled] .btn-link {
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #9a9a9a;
+  color: #bbbbbb;
   text-decoration: none;
 }
 .btn-lg {
@@ -1709,7 +1709,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
   width: 300px;
   height: 5px;
-  background: #9a9a9a;
+  background: #bbbbbb;
   border: none;
 }
 input[type=range]::-webkit-slider-thumb {
@@ -1718,14 +1718,14 @@ input[type=range]::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #565656;
+  background: #787878;
   margin-top: -5px;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #9a9a9a;
+  background: #bbbbbb;
 }
 /* Firefox */
 input[type=range] {
@@ -1744,7 +1744,7 @@ input[type=range]::-moz-range-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #565656;
+  background: #787878;
 }
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring {
@@ -1767,23 +1767,23 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #9a9a9a;
+  background: #bbbbbb;
 }
 input[type=range]::-ms-fill-upper {
-  background: #9a9a9a;
+  background: #bbbbbb;
 }
 input[type=range]::-ms-thumb {
   border: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #565656;
+  background: #787878;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #9a9a9a;
+  background: #bbbbbb;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #efefef;
+  background: #EFEFEF;
 }
 .btn-default .caret {
   border-top-color: #fff;
@@ -2010,7 +2010,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .options {
   height: 40px;
-  background-color: #211f1f;
+  background-color: #1f1f1f;
 }
 #app .headerPanel .options .centerOptions {
   margin: 5px 0 0 0;
@@ -2028,7 +2028,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .informationBox {
   background: #FFB81D;
-  color: #343434;
+  color: #555555;
   width: 100%;
   position: absolute;
   height: 40px;
@@ -2122,10 +2122,10 @@ input[type=range]:focus::-ms-fill-upper {
   display: block;
 }
 #app .leftPanel .closed .expandButton:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app .leftPanel .closed .expandFullButton:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app.browser-Explorer.browser-version-8 .leftPanel .closed .title {
   writing-mode: tb-lr;
@@ -2192,10 +2192,10 @@ input[type=range]:focus::-ms-fill-upper {
   display: block;
 }
 #app .rightPanel .closed .expandButton:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app .rightPanel .closed .expandFullButton:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app .rightPanel .main {
   margin-right: 10px;
@@ -2214,8 +2214,8 @@ input[type=range]:focus::-ms-fill-upper {
   line-height: 30px;
 }
 #app .centerPanel .content .acknowledgements {
-  background: #343434;
-  background: rgba(52, 52, 52, 0.7);
+  background: #555555;
+  background: rgba(85, 85, 85, 0.7);
   position: absolute;
   width: 190px;
   padding: 10px 10px 10px 10px;
@@ -2252,19 +2252,19 @@ input[type=range]:focus::-ms-fill-upper {
   max-width: 100px;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle) {
-  color: #26b5cc;
+  color: #869f33;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):link {
-  color: #26b5cc;
+  color: #869f33;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):hover {
-  color: #26b5cc;
+  color: #869f33;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):visited {
-  color: #26b5cc;
+  color: #869f33;
 }
 #app .centerPanel .content .acknowledgements .main a:not(.toggle):active {
-  color: #26b5cc;
+  color: #869f33;
 }
 #app .centerPanel .content .acknowledgements .main .attribution {
   overflow: hidden;
@@ -2609,7 +2609,7 @@ input[type=range]:focus::-ms-fill-upper {
   width: 24px;
   height: 24px;
   float: right;
-  background-color: #14a4c3;
+  background-color: #cc0000;
 }
 #app .overlay .middle {
   width: 100%;
@@ -2717,7 +2717,7 @@ input[type=range]:focus::-ms-fill-upper {
   cursor: pointer;
 }
 #app .imageBtn:focus {
-  border: 1px solid #14a4c3;
+  border: 1px solid lightskyblue;
 }
 #app .action,
 #app a.action.black,
@@ -2747,16 +2747,16 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .leftPanel {
   position: absolute;
-  background: #211f1f;
-  border: none;
+  background: #1f1f1f;
+  border: 1px solid #373737;
 }
 #app .centerPanel {
   position: absolute;
 }
 #app .rightPanel {
   position: absolute;
-  background: #211f1f;
-  border: none;
+  background: #1f1f1f;
+  border: 1px solid #373737;
 }
 #app .footerPanel {
   position: relative;
@@ -2780,6 +2780,54 @@ input[type=range]:focus::-ms-fill-upper {
 #app .headerPanel .options .centerOptions .nextOptions {
   margin: 0 0 0 10px;
 }
+#app .overlay .top .close {
+  background-image: url('../../img/close.png');
+  background-repeat: no-repeat;
+  height: 24px;
+  line-height: 24px;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  background-position: right center;
+  padding-right: 34px;
+  padding-left: 10px;
+  width: auto !important;
+  font-family: sans-serif !important;
+  background-color: #000;
+  font-size: 12px !important;
+}
+#app .overlay .top .close:link,
+#app .overlay .top .close:visited,
+#app .overlay .top .close:hover,
+#app .overlay .top .close:active {
+  color: #fff;
+  text-decoration: none;
+}
+#app .overlay .middle .content {
+  padding-top: 10px;
+}
+#app .overlay .middle .content h1 {
+  margin: 0 0 0 0;
+  border-bottom: 1px solid #bbbbbb;
+}
+#app .overlay.share .middle .content {
+  padding-top: 0px;
+}
+#app .footerPanel .search {
+  border: 1px solid #555555;
+}
+#app .footerPanel .searchPager {
+  border: 1px solid #555555;
+}
+#app .footerPanel .searchPager .controls {
+  margin-top: 0px;
+}
 #app .footerPanel .searchPager .controls .searchResultsInfo {
   width: 290px;
+}
+#app .footerPanel .searchResults .searchResultPlacemarker {
+  background: url('../../img/placemarker_down.png');
+}
+#app .footerPanel .searchOptions {
+  margin: 3px 0 0 0;
 }
