--- a/uv/themes/uv-en-GB-theme/css/uv-pdf-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-pdf-extension/theme.css
@@ -12,7 +12,7 @@
 }
 #app .overlay.share .middle .content .tabs .tab {
   line-height: normal;
-  color: #000;
+  color: #565656;
   font-size: 12px;
   display: inline-block;
   text-align: center;
@@ -23,13 +23,23 @@
   margin: 0;
   cursor: pointer;
 }
+#app .overlay.share .middle .content .tabs .tab:hover {
+  border-bottom: 1px solid #cc0000;
+  color: #000;
+  margin-bottom: -1px;
+  font-weight: bold;
+  height: 23px;
+  line-height: 23px;
+  text-decoration: none;
+}
 #app .overlay.share .middle .content .tabs .tab.first {
   margin: 0 0 0 10px;
 }
 #app .overlay.share .middle .content .tabs .tab.on {
-  border-bottom: 1px solid #1f1f1f;
-  color: #869f33;
+  border-bottom: 1px solid #cc0000;
+  color: #000;
   margin-bottom: -1px;
+  font-weight: bold;
   height: 23px;
   line-height: 23px;
 }
@@ -38,18 +48,18 @@
 }
 #app .overlay.share .middle .content .tabsContent {
   padding: 10px 0 5px 0;
-  border-top: 1px solid #EFEFEF;
+  border-top: 1px solid #efefef;
 }
 #app .overlay.share .middle .content .tabsContent .shareView .url {
   width: 100%;
-  background: #EFEFEF;
-  border: 1px solid #bbbbbb;
+  background: #efefef;
+  border: 1px solid #9a9a9a;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .code {
   width: 100%;
-  background: #EFEFEF;
-  border: 1px solid #bbbbbb;
+  background: #efefef;
+  border: 1px solid #9a9a9a;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .customSize {
@@ -87,7 +97,7 @@
   padding: 0;
 }
 #app .overlay.download .middle ol.options li.group {
-  border-bottom: 1px solid #EFEFEF;
+  border-bottom: 1px solid #efefef;
 }
 #app .overlay.download .middle ol.options li.group.lastVisible {
   border-bottom: none;
@@ -316,8 +326,8 @@
   margin: 0 0 20px 0;
 }
 #app .rightPanel .main .items .item .header {
-  color: #bbbbbb;
-  border-bottom: 1px solid #555555;
+  color: #9a9a9a;
+  border-bottom: 1px solid #343434;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
@@ -339,9 +349,9 @@
   white-space: nowrap;
   padding: 4px;
   text-transform: none;
-  background-color: #555555;
+  background-color: #343434;
   z-index: 1;
-  border: 1px solid #bbbbbb;
+  border: 1px solid #9a9a9a;
   border-radius: 2px;
   color: #fff;
 }
@@ -2098,10 +2108,10 @@ canvas {
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #787878;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: #a5c342;
+  background: #565656;
 }
 html,
 body {
@@ -2163,7 +2173,7 @@ img {
   padding: 5px 5px 5px 5px;
   line-height: 1.42857143;
   background-color: #000;
-  border: 1px solid #787878;
+  border: 1px solid #565656;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -2178,7 +2188,7 @@ hr {
   margin-top: 17px;
   margin-bottom: 17px;
   border: 0;
-  border-top: 1px solid #EFEFEF;
+  border-top: 1px solid #efefef;
 }
 .sr-only {
   position: absolute;
@@ -2238,8 +2248,8 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #fff;
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -2247,8 +2257,8 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   color: #fff;
-  background-color: #636363;
-  border-color: #595959;
+  background-color: #424242;
+  border-color: #383838;
 }
 .btn-default:active,
 .btn-default.active,
@@ -2270,8 +2280,8 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-primary {
   color: #fff;
@@ -2525,7 +2535,7 @@ fieldset[disabled] .btn-link {
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #bbbbbb;
+  color: #9a9a9a;
   text-decoration: none;
 }
 .btn-lg {
@@ -2565,7 +2575,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
   width: 300px;
   height: 5px;
-  background: #bbbbbb;
+  background: #9a9a9a;
   border: none;
 }
 input[type=range]::-webkit-slider-thumb {
@@ -2574,14 +2584,14 @@ input[type=range]::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
   margin-top: -5px;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 /* Firefox */
 input[type=range] {
@@ -2600,7 +2610,7 @@ input[type=range]::-moz-range-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring {
@@ -2623,23 +2633,23 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-fill-upper {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-thumb {
   border: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #EFEFEF;
+  background: #efefef;
 }
 .btn-default .caret {
   border-top-color: #fff;
@@ -2866,7 +2876,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .options {
   height: 40px;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
 }
 #app .headerPanel .options .centerOptions {
   margin: 5px 0 0 0;
@@ -2874,7 +2884,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .options .rightOptions {
   float: right;
-  margin: 6px 0 0 0;
+  margin: 5px 0 0 0;
 }
 #app .headerPanel .options .rightOptions .settings {
   background: url('../../img/uv-shared-module/settings.png');
@@ -2884,7 +2894,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .informationBox {
   background: #FFB81D;
-  color: #555555;
+  color: #343434;
   width: 100%;
   position: absolute;
   height: 40px;
@@ -2942,9 +2952,6 @@ input[type=range]:focus::-ms-fill-upper {
   cursor: pointer;
   margin: 7px 5px 0 0;
   display: none;
-}
-#app .leftPanel .top .expandFullButton {
-  display: block;
 }
 #app .leftPanel .closed {
   width: 25px;
@@ -3069,19 +3076,19 @@ input[type=range]:focus::-ms-fill-upper {
 #app .centerPanel .title span {
   line-height: 30px;
 }
-#app .centerPanel .content .acknowledgements {
-  background: #555555;
-  background: rgba(85, 85, 85, 0.7);
+#app .centerPanel .content .attribution {
+  background: #343434;
+  background: rgba(52, 52, 52, 0.7);
   position: absolute;
   width: 190px;
   padding: 10px 10px 10px 10px;
   margin: 10px 0 5px 15px;
   font-size: 11px;
 }
-#app .centerPanel .content .acknowledgements .header {
+#app .centerPanel .content .attribution .header {
   overflow: hidden;
 }
-#app .centerPanel .content .acknowledgements .header .title {
+#app .centerPanel .content .attribution .header .title {
   font-size: 11px;
   font-weight: bold;
   height: 20px;
@@ -3091,38 +3098,38 @@ input[type=range]:focus::-ms-fill-upper {
   padding: 0;
   text-transform: uppercase;
 }
-#app .centerPanel .content .acknowledgements .header .close {
+#app .centerPanel .content .attribution .header .close {
   width: 16px;
   height: 16px;
   margin: 2px;
   float: right;
-  background-image: url('../../img/uv-shared-module/close_acknowledgements.png');
+  background-image: url('../../img/uv-shared-module/close_attribution.png');
   cursor: pointer;
 }
-#app .centerPanel .content .acknowledgements .main {
+#app .centerPanel .content .attribution .main {
   margin-top: 5px;
 }
-#app .centerPanel .content .acknowledgements .main img {
+#app .centerPanel .content .attribution .main img {
   margin-top: 5px;
   margin-bottom: 5px;
   max-width: 100px;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle) {
+#app .centerPanel .content .attribution .main a:not(.toggle) {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):link {
+#app .centerPanel .content .attribution .main a:not(.toggle):link {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):hover {
+#app .centerPanel .content .attribution .main a:not(.toggle):hover {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):visited {
+#app .centerPanel .content .attribution .main a:not(.toggle):visited {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):active {
+#app .centerPanel .content .attribution .main a:not(.toggle):active {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main .attribution {
+#app .centerPanel .content .attribution .main .attribution-text {
   overflow: hidden;
 }
 #app .footerPanel .searchOptions {
@@ -3603,16 +3610,16 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .leftPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .centerPanel {
   position: absolute;
 }
 #app .rightPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .footerPanel {
   position: relative;
@@ -3632,7 +3639,7 @@ input[type=range]:focus::-ms-fill-upper {
   border: none;
 }
 #app .headerPanel .options .centerOptions {
-  width: 385px;
+  width: 390px;
 }
 #app .overlay .top .close {
   background-image: url('../../img/close.png');
@@ -3662,22 +3669,30 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .overlay .middle .content h1 {
   margin: 0 0 0 0;
-  border-bottom: 1px solid #bbbbbb;
+  border-bottom: 1px solid #9a9a9a;
 }
 #app .overlay.share .middle .content {
   padding-top: 0px;
 }
-#app .footerPanel .search {
-  border: 1px solid #555555;
+#app .overlay.share .middle .content .tabs .tab {
+  font-size: 18px;
+  line-height: 30px;
+  height: 30px;
+  width: 80px;
 }
-#app .footerPanel .searchPager {
-  border: 1px solid #555555;
+#app .overlay.share .middle .content .tabs .tab:hover {
+  height: 31px;
+  line-height: 31px;
+}
+#app .overlay.share .middle .content .tabs .tab.on {
+  height: 30px;
+  line-height: 30px;
 }
 #app .footerPanel .searchPager .controls {
   margin-top: 0px;
 }
 #app .footerPanel .searchPager .controls .searchResultsInfo {
-  width: 340px;
+  width: 337px;
 }
 #app .footerPanel .searchResults .searchResultPlacemarker {
   background: url('../../img/placemarker_down.png');
