--- a/uv/themes/uv-en-GB-theme/css/uv-seadragon-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-seadragon-extension/theme.css
@@ -12,7 +12,7 @@
 }
 #app .overlay.share .middle .content .tabs .tab {
   line-height: normal;
-  color: #000;
+  color: #565656;
   font-size: 12px;
   display: inline-block;
   text-align: center;
@@ -23,13 +23,23 @@
   margin: 0;
   cursor: pointer;
 }
+#app .overlay.share .middle .content .tabs .tab:hover {
+  border-bottom: 1px solid #cc0000;
+  color: #000;
+  margin-bottom: -1px;
+  font-weight: bold;
+  height: 23px;
+  line-height: 23px;
+  text-decoration: none;
+}
 #app .overlay.share .middle .content .tabs .tab.first {
   margin: 0 0 0 10px;
 }
 #app .overlay.share .middle .content .tabs .tab.on {
-  border-bottom: 1px solid #1f1f1f;
-  color: #869f33;
+  border-bottom: 1px solid #cc0000;
+  color: #000;
   margin-bottom: -1px;
+  font-weight: bold;
   height: 23px;
   line-height: 23px;
 }
@@ -38,18 +48,18 @@
 }
 #app .overlay.share .middle .content .tabsContent {
   padding: 10px 0 5px 0;
-  border-top: 1px solid #EFEFEF;
+  border-top: 1px solid #efefef;
 }
 #app .overlay.share .middle .content .tabsContent .shareView .url {
   width: 100%;
-  background: #EFEFEF;
-  border: 1px solid #bbbbbb;
+  background: #efefef;
+  border: 1px solid #9a9a9a;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .code {
   width: 100%;
-  background: #EFEFEF;
-  border: 1px solid #bbbbbb;
+  background: #efefef;
+  border: 1px solid #9a9a9a;
   font-size: 11px;
 }
 #app .overlay.share .middle .content .tabsContent .embedView .customSize {
@@ -87,7 +97,7 @@
   padding: 0;
 }
 #app .overlay.download .middle ol.options li.group {
-  border-bottom: 1px solid #EFEFEF;
+  border-bottom: 1px solid #efefef;
 }
 #app .overlay.download .middle ol.options li.group.lastVisible {
   border-bottom: none;
@@ -221,8 +231,8 @@
   margin: 0 0 20px 0;
 }
 #app .rightPanel .main .items .item .header {
-  color: #bbbbbb;
-  border-bottom: 1px solid #555555;
+  color: #9a9a9a;
+  border-bottom: 1px solid #343434;
   font-size: 11px;
   margin: 15px 10px 0 0;
   text-transform: uppercase;
@@ -244,9 +254,9 @@
   white-space: nowrap;
   padding: 4px;
   text-transform: none;
-  background-color: #555555;
+  background-color: #343434;
   z-index: 1;
-  border: 1px solid #bbbbbb;
+  border: 1px solid #9a9a9a;
   border-radius: 2px;
   color: #fff;
 }
@@ -274,40 +284,40 @@
   color: #000;
 }
 #app .headerPanel a.imageBtn.first {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/first.png');
   background-repeat: no-repeat;
   margin: 0 0 0 0;
 }
 #app .headerPanel a.imageBtn.first:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.prev {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/prev.png');
   background-repeat: no-repeat;
   margin: 0 0 0 5px;
 }
 #app .headerPanel a.imageBtn.prev:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.next {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/next.png');
   background-repeat: no-repeat;
   margin: 0 5px 0 0;
 }
 #app .headerPanel a.imageBtn.next:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.last {
-  background-color: #787878;
+  background-color: #565656;
   background-image: url('../../img/uv-pagingheaderpanel-module/last.png');
   background-repeat: no-repeat;
   margin: 0 0 0 0;
 }
 #app .headerPanel a.imageBtn.last:hover {
-  background-color: #555555;
+  background-color: #343434;
 }
 #app .headerPanel a.imageBtn.go {
   background: url('../../img/uv-pagingheaderpanel-module/go.png') no-repeat;
@@ -364,7 +374,7 @@
   text-align: right;
 }
 #app .headerPanel .centerOptions .mode label.disabled {
-  color: #bbbbbb;
+  color: #9a9a9a;
 }
 #app .headerPanel .centerOptions.modeOptionsDisabled {
   width: 280px;
@@ -408,18 +418,41 @@
   height: 25px;
 }
 #app .headerPanel .centerOptions .autocomplete .result.selected {
-  background: #EFEFEF;
+  background: #efefef;
 }
-#app .headerPanel .rightOptions .pagingToggle {
-  margin: -1px 4px 0 0;
+#app .headerPanel .rightOptions .pagingToggleButtons {
+  float: left;
 }
-#app .headerPanel .rightOptions .pagingToggle.one-up {
+#app .headerPanel .rightOptions .pagingToggleButtons .one-up {
   background-image: url('../../img/uv-pagingheaderpanel-module/one_up.png');
   background-repeat: no-repeat;
+  opacity: 0.75;
+  filter: alpha(opacity=75);
 }
-#app .headerPanel .rightOptions .pagingToggle.two-up {
+#app .headerPanel .rightOptions .pagingToggleButtons .one-up.on {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+#app .headerPanel .rightOptions .pagingToggleButtons .two-up {
   background-image: url('../../img/uv-pagingheaderpanel-module/two_up.png');
   background-repeat: no-repeat;
+  opacity: 0.75;
+  filter: alpha(opacity=75);
+}
+#app .headerPanel .rightOptions .pagingToggleButtons .two-up.on {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+#app .headerPanel .rightOptions .gallery {
+  background-image: url('../../img/uv-pagingheaderpanel-module/grid.png');
+  background-repeat: no-repeat;
+  margin-right: 5px;
+  opacity: 0.75;
+  filter: alpha(opacity=75);
+}
+#app .headerPanel .rightOptions .gallery.on {
+  opacity: 1;
+  filter: alpha(opacity=100);
 }
 #app .headerPanel .rightOptions .localeToggle {
   color: #fff;
@@ -641,7 +674,7 @@
 }
  #app .leftPanel .tabs .tab {
   color: #fff;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   display: inline-block;
   text-align: center;
   line-height: 22px;
@@ -658,7 +691,7 @@
 }
  #app .leftPanel .tabs .tab.on {
   border: 1px solid #373737;
-  border-bottom: 1px solid #1f1f1f;
+  border-bottom: 1px solid #211f1f;
   color: #869f33;
   margin-bottom: -1px;
   height: 25px;
@@ -709,8 +742,8 @@
 }
  #app .leftPanel .tabsContent .btn-group .btn {
   padding: 0 5px 0 5px;
-  background: #787878;
-  color: #bbbbbb;
+  background: #565656;
+  color: #9a9a9a;
   width: 55px;
 }
  #app .leftPanel .tabsContent .btn-group .btn.on {
@@ -905,7 +938,7 @@
   padding: 30px 9px 0 9px;
 }
 #app .footerPanel .searchResults .line {
-  background: #787878;
+  background: #565656;
   height: 2px;
 }
 #app .footerPanel .searchResults .searchResultPlacemarker {
@@ -975,7 +1008,7 @@
 }
 #app .footerPanel .search {
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   height: 32px;
 }
 #app .footerPanel .search .searchTextContainer {
@@ -1013,7 +1046,7 @@
   height: 25px;
 }
 #app .footerPanel .search .searchTextContainer .autocomplete .result.selected {
-  background: #EFEFEF;
+  background: #efefef;
 }
 #app .footerPanel .search .searchTextContainer .searchText {
   width: 245px;
@@ -1047,7 +1080,7 @@
 }
 #app .footerPanel .searchPager {
   position: relative;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
   height: 32px;
   overflow: hidden;
 }
@@ -1171,10 +1204,10 @@
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #787878;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: #a5c342;
+  background: #565656;
 }
 html,
 body {
@@ -1236,7 +1269,7 @@ img {
   padding: 5px 5px 5px 5px;
   line-height: 1.42857143;
   background-color: #000;
-  border: 1px solid #787878;
+  border: 1px solid #565656;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -1251,7 +1284,7 @@ hr {
   margin-top: 17px;
   margin-bottom: 17px;
   border: 0;
-  border-top: 1px solid #EFEFEF;
+  border-top: 1px solid #efefef;
 }
 .sr-only {
   position: absolute;
@@ -1311,8 +1344,8 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #fff;
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -1320,8 +1353,8 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
   color: #fff;
-  background-color: #636363;
-  border-color: #595959;
+  background-color: #424242;
+  border-color: #383838;
 }
 .btn-default:active,
 .btn-default.active,
@@ -1343,8 +1376,8 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #787878;
-  border-color: #787878;
+  background-color: #565656;
+  border-color: #565656;
 }
 .btn-primary {
   color: #fff;
@@ -1598,7 +1631,7 @@ fieldset[disabled] .btn-link {
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #bbbbbb;
+  color: #9a9a9a;
   text-decoration: none;
 }
 .btn-lg {
@@ -1638,7 +1671,7 @@ input[type=range] {
 input[type=range]::-webkit-slider-runnable-track {
   width: 300px;
   height: 5px;
-  background: #bbbbbb;
+  background: #9a9a9a;
   border: none;
 }
 input[type=range]::-webkit-slider-thumb {
@@ -1647,14 +1680,14 @@ input[type=range]::-webkit-slider-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
   margin-top: -5px;
 }
 input[type=range]:focus {
   outline: none;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 /* Firefox */
 input[type=range] {
@@ -1673,7 +1706,7 @@ input[type=range]::-moz-range-thumb {
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 /*hide the outline behind the border*/
 input[type=range]:-moz-focusring {
@@ -1696,23 +1729,23 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-fill-upper {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]::-ms-thumb {
   border: none;
   height: 16px;
   width: 16px;
   border-radius: 50%;
-  background: #787878;
+  background: #565656;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #bbbbbb;
+  background: #9a9a9a;
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #EFEFEF;
+  background: #efefef;
 }
 .btn-default .caret {
   border-top-color: #fff;
@@ -1939,7 +1972,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .options {
   height: 40px;
-  background-color: #1f1f1f;
+  background-color: #211f1f;
 }
 #app .headerPanel .options .centerOptions {
   margin: 5px 0 0 0;
@@ -1947,7 +1980,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .options .rightOptions {
   float: right;
-  margin: 6px 0 0 0;
+  margin: 5px 0 0 0;
 }
 #app .headerPanel .options .rightOptions .settings {
   background: url('../../img/uv-shared-module/settings.png');
@@ -1957,7 +1990,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .headerPanel .informationBox {
   background: #FFB81D;
-  color: #555555;
+  color: #343434;
   width: 100%;
   position: absolute;
   height: 40px;
@@ -2015,9 +2048,6 @@ input[type=range]:focus::-ms-fill-upper {
   cursor: pointer;
   margin: 7px 5px 0 0;
   display: none;
-}
-#app .leftPanel .top .expandFullButton {
-  display: block;
 }
 #app .leftPanel .closed {
   width: 25px;
@@ -2142,19 +2172,19 @@ input[type=range]:focus::-ms-fill-upper {
 #app .centerPanel .title span {
   line-height: 30px;
 }
-#app .centerPanel .content .acknowledgements {
-  background: #555555;
-  background: rgba(85, 85, 85, 0.7);
+#app .centerPanel .content .attribution {
+  background: #343434;
+  background: rgba(52, 52, 52, 0.7);
   position: absolute;
   width: 190px;
   padding: 10px 10px 10px 10px;
   margin: 10px 0 5px 15px;
   font-size: 11px;
 }
-#app .centerPanel .content .acknowledgements .header {
+#app .centerPanel .content .attribution .header {
   overflow: hidden;
 }
-#app .centerPanel .content .acknowledgements .header .title {
+#app .centerPanel .content .attribution .header .title {
   font-size: 11px;
   font-weight: bold;
   height: 20px;
@@ -2164,38 +2194,38 @@ input[type=range]:focus::-ms-fill-upper {
   padding: 0;
   text-transform: uppercase;
 }
-#app .centerPanel .content .acknowledgements .header .close {
+#app .centerPanel .content .attribution .header .close {
   width: 16px;
   height: 16px;
   margin: 2px;
   float: right;
-  background-image: url('../../img/uv-shared-module/close_acknowledgements.png');
+  background-image: url('../../img/uv-shared-module/close_attribution.png');
   cursor: pointer;
 }
-#app .centerPanel .content .acknowledgements .main {
+#app .centerPanel .content .attribution .main {
   margin-top: 5px;
 }
-#app .centerPanel .content .acknowledgements .main img {
+#app .centerPanel .content .attribution .main img {
   margin-top: 5px;
   margin-bottom: 5px;
   max-width: 100px;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle) {
+#app .centerPanel .content .attribution .main a:not(.toggle) {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):link {
+#app .centerPanel .content .attribution .main a:not(.toggle):link {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):hover {
+#app .centerPanel .content .attribution .main a:not(.toggle):hover {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):visited {
+#app .centerPanel .content .attribution .main a:not(.toggle):visited {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main a:not(.toggle):active {
+#app .centerPanel .content .attribution .main a:not(.toggle):active {
   color: #869f33;
 }
-#app .centerPanel .content .acknowledgements .main .attribution {
+#app .centerPanel .content .attribution .main .attribution-text {
   overflow: hidden;
 }
 #app .footerPanel .searchOptions {
@@ -2676,16 +2706,16 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .leftPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .centerPanel {
   position: absolute;
 }
 #app .rightPanel {
   position: absolute;
-  background: #1f1f1f;
-  border: 1px solid #373737;
+  background: #211f1f;
+  border: none;
 }
 #app .footerPanel {
   position: relative;
@@ -2695,7 +2725,7 @@ input[type=range]:focus::-ms-fill-upper {
   margin-left: 8px;
 }
 #app .headerPanel .options .centerOptions {
-  width: 385px;
+  width: 390px;
 }
 #app .overlay .top .close {
   background-image: url('../../img/close.png');
@@ -2725,22 +2755,30 @@ input[type=range]:focus::-ms-fill-upper {
 }
 #app .overlay .middle .content h1 {
   margin: 0 0 0 0;
-  border-bottom: 1px solid #bbbbbb;
+  border-bottom: 1px solid #9a9a9a;
 }
 #app .overlay.share .middle .content {
   padding-top: 0px;
 }
-#app .footerPanel .search {
-  border: 1px solid #555555;
+#app .overlay.share .middle .content .tabs .tab {
+  font-size: 18px;
+  line-height: 30px;
+  height: 30px;
+  width: 80px;
 }
-#app .footerPanel .searchPager {
-  border: 1px solid #555555;
+#app .overlay.share .middle .content .tabs .tab:hover {
+  height: 31px;
+  line-height: 31px;
+}
+#app .overlay.share .middle .content .tabs .tab.on {
+  height: 30px;
+  line-height: 30px;
 }
 #app .footerPanel .searchPager .controls {
   margin-top: 0px;
 }
 #app .footerPanel .searchPager .controls .searchResultsInfo {
-  width: 340px;
+  width: 337px;
 }
 #app .footerPanel .searchResults .searchResultPlacemarker {
   background: url('../../img/placemarker_down.png');
